--- a/source/less/components/shop.less
+++ b/source/less/components/shop.less
@@ -1,11 +1,10 @@
-// Начните писать стили здесь
 .shop {
   position: relative;
 }
 
 .shop__list {
   position: relative;
-  margin: 0px;
+  margin: 0;
 
   @media (min-width: @tablet) {
     display: grid;
