--- a/source/less/components/additions.less
+++ b/source/less/components/additions.less
@@ -5,12 +5,34 @@
   @media (min-width: @tablet) {
     margin-top: 68px;
   }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: calc(100% + 20px);
+    height: 2px;
+    background-color: @green;
+    top: 15px;
+    left: 0;
+
+    @media (min-width: @tablet) {
+      width: calc(100% + 60px);
+      right: -30px;
+      left: -30px;
+    }
+
+    @media (min-width: @laptop) {
+      width: calc(100% + 220px);
+      left: -110px;
+    }
+  }
 }
 
 .additions__wrapper {
   @media (min-width: @laptop) {
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 325px;
   }
 }
 
@@ -19,59 +41,26 @@
   line-height: 24px;
   font-weight: 400;
   margin-bottom: 36px;
+  position: relative;
+  z-index: 2;
+  background-color: @white;
+  display: block;
+  width: fit-content;
+  padding-right: 22px;
 
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
     font-weight: 400;
     margin-left: 37px;
+    padding-left: 32px;
+    padding-right: 36px;
   }
 
   @media (min-width: @laptop) {
+    padding-left: 40px;
+    padding-right: 35px;
     margin-left: 0;
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 53px;
-    height: 2px;
-    background-color: @green;
-    top: 15px;
-    right: -20px;
-
-    @media (min-width: @tablet) {
-      width: 328px;
-      right: -30px;
-    }
-
-    @media (min-width: @laptop) {
-      width: 957px;
-      right: -110px;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 280px;
-    height: 1px;
-    background-color: @border-grey;
-    top: 58px;
-    left: 0;
-
-    @media (min-width: @tablet) {
-      width: 30px;
-      height: 2px;
-      background-color: @green;
-      top: 15px;
-      left: -30px;
-    }
-
-    @media (min-width: @laptop) {
-      width: 70px;
-      left: -110px;
-    }
   }
 }
 
@@ -83,10 +72,10 @@
     border: 1px solid @border-grey;
   }
 
-  @media (min-width: @tablet) {
-    border-left: transparent;
-    border-right: transparent;
-    width: 895px;
+  @media (min-width: @laptop) {
+    border: none;
+    width: 100%;
+    margin-top: 0;
   }
 }
 
@@ -96,15 +85,52 @@
 
   @media (min-width: @tablet) {
     margin-left: 35px;
+    margin-right: 35px;
     display: grid;
-    grid-template-columns: 316px 316px;
+    grid-template-columns: 1fr 1fr;
   }
 
   @media (min-width: @laptop) {
+    border: 1px solid @border-grey;
+    border-left: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
     margin-left: 0;
     display: grid;
-    grid-template-columns: 324px 326px 244px;
-    margin-top: 15px;
+    grid-template-columns: 324px 326px 1fr;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 17px;
+
+    &:last-of-type {
+      border-bottom: 1px solid @border-grey;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: @border-grey;
+    top: 119px;
+    left: 0;
+
+    @media (min-width: @tablet) {
+      width: calc(100% + 76px);
+      top: 113px;
+      left: -38px;
+    }
+
+    @media (min-width: @laptop) {
+      content: none;
+    }
+  }
+
+  &:last-of-type::after {
+    content: none;
   }
 }
 
@@ -125,12 +151,14 @@
 
   @media (min-width: @laptop) {
     margin-bottom: 0;
+    display: block;
+    align-self: center;
   }
 }
 
 .additions__properties {
   display: flex;
-  width: 280px;
+  width: 100%;
   justify-content: space-between;
   margin-bottom: 15px;
   flex-wrap: wrap;
@@ -142,6 +170,7 @@
   @media (min-width: @laptop) {
     margin-bottom: 0;
     width: 288px;
+    align-self: center;
   }
 }
 
@@ -185,55 +214,33 @@
 
 .additions__order {
   margin: 0;
-  width: 280px;
+  width: 100%;
 
   @media (min-width: @tablet) {
-    width: 632px;
     margin-bottom: 28px;
+    grid-column: 1 / 3;
   }
 
   @media (min-width: @laptop) {
-    width: 244px;
-    margin-bottom: 32px;
+    width: 100%;
+    margin-bottom: 0;
     margin-left: 0;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 280px;
-    height: 1px;
-    background-color: @border-grey;
-    top: 119px;
-    left: 0;
-
-    @media (min-width: @tablet) {
-      width: 706px;
-      top: 113px;
-      left: -35px;
-    }
-
-    @media (min-width: @laptop) {
-      width: 895px;
-      top: 60px;
-      left: 0;
-    }
+    grid-column: 3;
   }
 }
 
 .additions__promo-wrapper {
   position: relative;
   display: flex;
-  position: relative;
+  justify-content: center;
 
   @media (min-width: @tablet) {
     margin-bottom: 76px;
-
   }
 
   @media (min-width: @laptop) {
     margin-left: 80px;
-    margin-top: 57px;
+    margin-bottom: 0;
   }
 
   &::before {
@@ -245,7 +252,6 @@
     background-size: 279px 289px;
     background-repeat: no-repeat;
     position: absolute;
-    left: 0;
     top: 0;
 
     @media (min-width: @tablet) {
@@ -267,7 +273,6 @@
     content: "";
     display: block;
     position: absolute;
-    left: 0;
     top: 0;
     width: 280px;
     height: 290px;
@@ -306,9 +311,9 @@
 
   @media (min-width: @tablet) {
     width: 161px;
-    padding-top: 0px;
+    padding-top: 0;
     margin-top: 71px;
-    margin-left: 422px;
+    margin-left: 59.69%;
     text-align: left;
     font-size: 16px;
     line-height: 20px;
@@ -317,6 +322,7 @@
 
   @media (min-width: @laptop) {
     margin-top: 185px;
+    margin-bottom: 0;
     margin-left: 41px;
     text-align: center;
   }
