--- a/source/less/components/button.less
+++ b/source/less/components/button.less
@@ -6,7 +6,7 @@
   color: #ffffff;
   text-decoration: inherit;
   text-transform: uppercase;
-  background-color: #68b738;
+  background-color: @green;
   padding-top: 10px;
   padding-bottom: 10px;
   display: block;
@@ -15,4 +15,14 @@
   height: auto;
   margin-left: auto;
   margin-right: auto;
+  cursor: pointer;
+
+  &:hover {
+    background-color: @green2;
+  }
+
+  &:active {
+    background-color: @green2;
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
