--- a/source/less/components/card.less
+++ b/source/less/components/card.less
@@ -1,7 +1,7 @@
 // Начните писать стили здесь
 .card {
   position: relative;
-  width: 324px;
+  width: 100%;
 
   @media (min-width: @tablet) {
     background-color: @grey;
@@ -10,7 +10,6 @@
   }
 
   @media (min-width: @laptop) {
-    width: 245px;
     background-color: @grey;
     background-size: 245px 430px;
     background-repeat: no-repeat;
@@ -19,17 +18,17 @@
   &::after {
     content: "";
     position: absolute;
-    width: 320px;
+    width: calc(100% + 40px);
     height: 1px;
     background-color: @shop-grey;
-    top: 215px;
+    top: 166px;
     left: -20px;
 
     @media (min-width: @tablet) {
       content: "";
       background-color: @white;
       height: 141px;
-      width: 324px;
+      width: 100%;
       position: absolute;
       left: 0;
       top: 0;
@@ -39,7 +38,7 @@
 
 .card-wrapper {
   display: grid;
-  grid-template-columns: 140px 140px;
+  grid-template-columns: 1fr 1fr;
   margin-top: 19px;
   align-items: center;
   justify-items: center;
@@ -112,12 +111,10 @@
 }
 
 .card__text-side {
-  @media (min-width: @tablet) {
-    width: 248px;
-  }
+  width: 100%;
 
-  @media (min-width: @laptop) {
-    width: 168px;
+  @media (min-width: @tablet) {
+    width: 76.54%;
   }
 }
 
@@ -125,7 +122,6 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  color: @special_dark-grey;
   text-transform: uppercase;
   margin-bottom: 14px;
   color: @special_dark-grey-2;
@@ -162,7 +158,7 @@
   line-height: 16px;
   font-weight: 400;
   display: flex;
-  width: 120px;
+  width: 100%;
   justify-content: space-between;
   margin-bottom: 22px;
   color: @special_dark-grey;
@@ -171,12 +167,11 @@
     font-size: 16px;
     line-height: 16px;
     font-weight: 400;
-    justify-content: stretch;
     width: 100%;
   }
 
   @media (min-width: @laptop) {
-    width: 168px;
+    width: 100%;
   }
 }
 
@@ -189,11 +184,6 @@
     border-bottom: 1px solid @border-grey;
     margin-bottom: 7px;
     padding-bottom: 9px;
-    width: 124px;
-  }
-
-  @media (min-width: @laptop) {
-    width: 84px;
   }
 }
 
@@ -206,17 +196,33 @@
   text-align: end;
 }
 
+.card__details {
+  @media (min-width: @tablet) {
+    width: 100%;
+  }
+}
+
+.card__values {
+  @media (min-width: @tablet) {
+    width: 100%;
+  }
+}
+
 .card__order {
   margin-bottom: 25px;
-  width: 280px;
+  width: 100%;
+
+  @media (max-width: @mobile-only) {
+    grid-column: 1 / 3;
+  }
 
   @media (min-width: @tablet) {
-    width: 248px;
+    width: 76.54%;
     margin-bottom: 39px;
   }
 
   @media (min-width: @laptop) {
-    width: 168px;
+    width: 76.54%;
     margin-bottom: 40px;
   }
 }
@@ -225,17 +231,57 @@
   position: relative;
 
   @media (min-width: @tablet) {
-    width: 324px;
+    width: 98.37%;
     z-index: 2;
     margin-top: 141px;
     border: 2px solid @border-grey2;
   }
 
   @media (min-width: @laptop) {
-    width: 245px;
     z-index: 2;
     margin-top: 141px;
     border: 2px solid @border-grey2;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: @plus-grey;
+    bottom: 135px;
+    left: calc(50% - 15px);
+
+    @media (min-width: @tablet) {
+      left: calc(50% - 30px);
+      top: 82px;
+      width: 60px;
+    }
+
+    @media (min-width: @laptop) {
+      top: 82px;
+      width: 60px;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 30px;
+    background-color: @plus-grey;
+    bottom: 120px;
+    left: 50%;
+
+    @media (min-width: @tablet) {
+      top: 52px;
+      height: 60px;
+    }
+
+    @media (min-width: @laptop) {
+      top: 52px;
+      height: 60px;
+    }
   }
 }
 
@@ -260,54 +306,10 @@
     margin-top: 177px;
     margin-bottom: 23px;
   }
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 30px;
-    height: 2px;
-    background-color: @plus-grey;
-    bottom: 135px;
-    left: 125px;
-
-    @media (min-width: @tablet) {
-      left: 132px;
-      top: 82px;
-      width: 60px;
-    }
-
-    @media (min-width: @laptop) {
-      left: 93px;
-      top: 82px;
-      width: 60px;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 2px;
-    height: 30px;
-    background-color: @plus-grey;
-    bottom: 120px;
-    left: 140px;
-
-    @media (min-width: @tablet) {
-      left: 162px;
-      top: 52px;
-      height: 60px;
-    }
-
-    @media (min-width: @laptop) {
-      left: 123px;
-      top: 52px;
-      height: 60px;
-    }
-  }
 }
 
 .card__description {
-  margin-top: 0px;
+  margin-top: 0;
   text-align: center;
   font-family: "Arial", sans-serif;
   font-size: 12px;
@@ -327,7 +329,7 @@
 }
 
 .card__show-more {
-  width: 280px;
+  width: 100%;
   display: block;
   text-decoration: none;
   color: inherit;
@@ -340,12 +342,18 @@
   padding-bottom: 10px;
   margin-bottom: 50px;
 
+  &:hover {
+    background-color: @shop-grey;
+  }
+
+  &:active {
+    background-color: @shop-grey;
+    color: rgba(68, 68, 68, 0.3);
+  }
+
   @media (min-width: @tablet) {
     margin-left: auto;
     margin-right: auto;
-  }
-
-  @media (min-width: @laptop) {
-    width: 168px;
+    width: 76.54%;
   }
 }
