--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -1,4 +1,3 @@
-// Начните писать стили здесь
 .page {
   height: auto;
   font-family: "Oswald", sans-serif;
@@ -14,7 +13,7 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  background-color: @figma-background; /* ЭТО ВРЕМЕННАЯ КОНТРАСТНАЯ ПОДКЛАДКА*/
+  background-color: @white; /* ЭТО ВРЕМЕННАЯ КОНТРАСТНАЯ ПОДКЛАДКА*/
 
   @media (min-width: @tablet) {
     min-width: @tablet;
@@ -22,25 +21,6 @@
 
   @media (min-width: @laptop) {
     min-width: @laptop;
-  }
-}
-
-.page__body-outer-wrapper {
-  position: relative;
-  display: block;
-  max-width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: @white;
-
-  @media (min-width: @tablet) {
-    min-width: @tablet;
-    max-width: @tablet;
-  }
-
-  @media (min-width: @laptop) {
-    min-width: @laptop;
-    max-width: @laptop;
   }
 }
 
@@ -84,7 +64,7 @@
   &::after {
     content: "";
     position: absolute;
-    width: 320px;
+    width: 100%;
     height: 1px;
     background-color: @shop-grey;
     top: 170px;
@@ -109,17 +89,5 @@
     margin-left: 110px;
     margin-right: 110px;
     margin-top: 50px;
-  }
-}
-
-.page__footer {
-  max-width: 320px;
-
-  @media (min-width: @tablet) {
-    max-width: @tablet;
-  }
-
-  @media (min-width: @laptop) {
-    max-width: @laptop;
   }
 }
