--- a/source/less/components/programs.less
+++ b/source/less/components/programs.less
@@ -1,51 +1,31 @@
 // Начните писать стили здесь
 .programs {
   position: relative;
-  max-width: 320px;
+  max-width: 100%;
   margin-top: 20px;
 
   @media (min-width: @laptop) {
     display: flex;
-    max-width: @laptop;
     justify-content: space-between;
+    gap: 0 80px;
   }
 }
 
 .programs__item {
   background-color: @grey;
   position: relative;
+  display: block;
 
   @media (min-width: @tablet) {
-    width: 656px;
     padding-left: 52px;
   }
 
   @media (min-width: @laptop) {
-    width: 518px;
     padding-left: 52px;
-  }
-}
-
-.programs__title {
-  font-size: 24px;
-  line-height: 37px;
-  margin-left: 91px;
-  padding-top: 30px;
-  text-transform: uppercase;
-  font-weight: 400;
-
-  @media (min-width: @tablet) {
-    font-size: 36px;
-    line-height: 36px;
-    padding-top: 77px;
-    margin-left: 0px;
+    width: 100%;
   }
 
-  @media (min-width: @laptop) {
-    margin-left: 162px;
-  }
-
-  &--slim::before {
+  &-slim::before {
     content: "";
     display: block;
     position: absolute;
@@ -61,7 +41,8 @@
       height: 194px;
       background-repeat: no-repeat;
       background-size: 100%;
-      left: 476px;
+      left: auto;
+      right: 92px;
       top: 81px;
     }
 
@@ -75,7 +56,7 @@
     }
   }
 
-  &--mass::before {
+  &-mass::before {
     content: "";
     display: block;
     position: absolute;
@@ -91,7 +72,8 @@
       height: 112px;
       background-repeat: no-repeat;
       background-size: 100%;
-      left: 412px;
+      left: auto;
+      right: 28px;
       top: 135px;
     }
 
@@ -120,7 +102,8 @@
     @media (min-width: @tablet) {
       width: 200px;
       height: 200px;
-      left: 446px;
+      left: auto;
+      right: 62px;
       top: 92px;
     }
 
@@ -133,36 +116,64 @@
   }
 }
 
+.programs__title {
+  font-size: 24px;
+  line-height: 37px;
+  margin-left: 91px;
+  padding-top: 30px;
+  text-transform: uppercase;
+  font-weight: 400;
+
+  @media (min-width: @tablet) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-top: 77px;
+    margin-left: 0;
+  }
+
+  @media (min-width: @laptop) {
+    margin-left: 162px;
+  }
+}
+
 .programs-description-wrapper {
   position: relative;
+  margin-right: 20px;
+  margin-left: 20px;
+
+  @media (min-width: @tablet) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .programs__description {
-  font-family: Arial, sans-serif;
-  margin-left: 20px;
-  margin-right: 33px;
+  font-family: "Arial", sans-serif;
   margin-top: 29px;
 
   @media (min-width: @tablet) {
-    margin-left: 0px;
-    width: 340px;
+    margin-left: 0;
+    max-width: 52%;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
   }
 
   @media (min-width: @laptop) {
-    width: 467px;
+    display: block;
+    padding-right: 52px;
     margin-top: 73px;
+    margin-right: 0;
+    max-width: 100%;
   }
 
   &::after {
     content: "";
     display: block;
     position: absolute;
-    left: 20px;
+    left: 0;
     bottom: -23px;
-    width: 240px;
+    width: 100%;
     height: 1px;
     z-index: 0;
     background-color: @dark-grey;
@@ -200,7 +211,7 @@
   margin-bottom: 20px;
 
   @media (min-width: @tablet) {
-    margin-left: 0px;
+    margin-left: 0;
     margin-top: 52px;
     padding-bottom: 57px;
     font-size: 20px;
@@ -226,5 +237,20 @@
       left: 133px;
       top: 9px;
     }
+  }
+
+  &:hover::after {
+    width: 32px;
+    background-image: url("../img/arrow-icon-long.svg");
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:active::after {
+    width: 32px;
+    background-image: url("../img/arrow-icon-long.svg");
+    opacity: 0.3;
   }
 }
