--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -1,6 +1,7 @@
 // Colors
 
 @green: #68B738;
+@green2: #5EAA2F;
 @grey: #F2F2F2;
 @dark-grey: #D9D9D9;
 @black: #000000;
@@ -15,6 +16,10 @@
 @figma-background: #E5E5E5;
 @contrast: tomato;
 @slider-grey: #DCDCDC;
+@cat-bg: #515056;
+@cat-bg-dark:#434347;
+@invalid: #FF8282;
+@input-hover: #BABABA;
 
 // Viewports
 
