--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,19 +2,21 @@
 @import "globals/global.less";
 @import "globals/variables.less";
 @import "globals/mixins.less";
-@import "globals/components/page-header.less";
-@import "globals/components/button.less";
-@import "globals/components/main-nav.less";
-@import "globals/components/visually-hidden.less";
-@import "globals/components/page.less";
-@import "globals/components/product-info.less";
-@import "globals/components/programs.less";
-@import "globals/components/advantages.less";
-@import "globals/components/example.less";
-@import "globals/components/footer-contacts.less";
-@import "globals/components/footer-media.less";
-@import "globals/components/shop.less";
-@import "globals/components/card.less";
-@import "globals/components/additions.less";
-@import "globals/components/bio-data.less";
-@import "globals/components/data-form.less";
+@import "components/page-header.less";
+@import "components/button.less";
+@import "components/main-nav.less";
+@import "components/visually-hidden.less";
+@import "components/page.less";
+@import "components/product-info.less";
+@import "components/programs.less";
+@import "components/advantages.less";
+@import "components/example.less";
+@import "components/footer-contacts.less";
+@import "components/footer-media.less";
+@import "components/social.less";
+@import "components/slider.less";
+@import "components/shop.less";
+@import "components/card.less";
+@import "components/additions.less";
+@import "components/bio-data.less";
+@import "components/data-form.less";
