Добавляет резиновые обёртки, центрует наполнение

--- a/source/less/components/card.less
+++ b/source/less/components/card.less
@@ -36,7 +36,7 @@
   }
 }
 
-.card-wrapper {
+.card__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 19px;
@@ -52,7 +52,7 @@
   }
 }
 
-.card.card-last {
+.card.card--last {
   display: inline;
 
   @media (min-width: @tablet) {
