--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -5,17 +5,16 @@
 }
 
 .advantages__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
   }
 }
 
@@ -112,7 +111,7 @@
     }
   }
 
-  &-bio::after {
+  &--bio::after {
     content: "";
     display: block;
     position: absolute;
@@ -131,7 +130,7 @@
     }
   }
 
-  &-powder::after {
+  &--powder::after {
     content: "";
     display: block;
     position: absolute;
@@ -150,7 +149,7 @@
     }
   }
 
-  &-meal::after {
+  &--meal::after {
     content: "";
     display: block;
     position: absolute;
@@ -169,7 +168,7 @@
     }
   }
 
-  &-time::after {
+  &--time::after {
     content: "";
     display: block;
     position: absolute;
@@ -207,7 +206,7 @@
     font-size: 280px;
     line-height: 280px;
     top: 32px;
-    left: 118px;
+    left: 165px;
     position: absolute;
     color: @grey;
   }
