--- a/source/less/components/example.less
+++ b/source/less/components/example.less
@@ -32,19 +32,18 @@
 }
 
 .example__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
     position: relative;
     z-index: 2;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
     display: flex;
   }
 }
