--- a/source/less/components/footer-contacts.less
+++ b/source/less/components/footer-contacts.less
@@ -6,16 +6,16 @@
   }
 }
 
-.footer-contacts-wrapper {
+.footer-contacts__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
