--- a/source/less/components/footer-media.less
+++ b/source/less/components/footer-media.less
@@ -9,71 +9,21 @@
   }
 }
 
-.footer-media-wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+.footer-media__wrapper {
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
     display: flex;
     justify-content: space-between;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
   }
 }
-
-.footer-media__logo::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 20px;
-  top: 95px;
-  width: 100%;
-  height: 1px;
-  background-color: @dark-grey;
-
-  @media (min-width: @tablet) {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-}
-
-.footer-media__logo::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 20px;
-  top: 158px;
-  width: 100%;
-  height: 1px;
-  background-color: @dark-grey;
-
-  @media (min-width: @tablet) {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-}
-
 
 .footer-media__logo-title {
   display: block;
