--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -2,7 +2,7 @@
 .main-nav {
   position: absolute;
   left: 0;
-  top: 52px;
+  top: 67px;
   z-index: 3;
 
   @media (max-width: @mobile-only) {
@@ -19,11 +19,11 @@
   }
 }
 
-.main-nav-inline {
+.main-nav--inline {
   position: static;
 }
 
-.main-nav-index {
+.main-nav--index {
   @media (min-width: @laptop) {
     &::before {
       content: "";
@@ -56,6 +56,7 @@
 .main-nav__list {
   display: block;
   text-align: center;
+  margin: 0;
 
   @media (min-width: @tablet) {
     display: flex;
@@ -72,6 +73,10 @@
 .main-nav__item {
   background-color: @white;
   position: relative;
+
+  @media (max-width: @mobile-only) {
+    border-top: 1px solid @navigation-splitter;
+  }
 
   @media (min-width: @tablet) {
     height: 24px;
@@ -90,6 +95,12 @@
     &:last-of-type {
       margin-right: 0;
     }
+  }
+}
+
+.main-nav__item:last-of-type {
+  @media (max-width: @mobile-only) {
+    border-bottom: 1px solid @navigation-splitter;
   }
 }
 
@@ -134,36 +145,6 @@
     height: 34px;
     padding-top: 0;
   }
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: @dark-grey;
-    top: 0;
-    left: 0;
-    z-index: 1;
-
-    @media (min-width: @tablet) {
-      content: none;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 320px;
-    height: 1px;
-    background-color: @dark-grey;
-    top: 66px;
-    left: 0;
-    z-index: 1;
-
-    @media (min-width: @tablet) {
-      content: none;
-    }
-  }
 }
 
 .main-nav-inline .main-nav__link {
@@ -176,7 +157,7 @@
   }
 }
 
-.main-nav-index .main-nav__link {
+.main-nav--index .main-nav__link {
   @media (min-width: @laptop) {
     color: @white;
 
