--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -21,17 +21,16 @@
 }
 
 .page-header__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
   }
 }
 
@@ -120,6 +119,10 @@
 
 .page-header__toggle--cross {
   background-image: url("/img/toggle-mobile-cross.svg");
+}
+
+.page-header__toggle--disabled {
+  display: none;
 }
 
 .page-header__white-background .main-nav {
