--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -25,17 +25,16 @@
 }
 
 .page__catalog-wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
     margin-top: 50px;
   }
 }
@@ -46,6 +45,10 @@
   font-weight: 400;
   padding-top: 27px;
   padding-bottom: 41px;
+
+  @media (max-width: @mobile-only) {
+    border-bottom: 1px solid @shop-grey;
+  }
 
   @media (min-width: @tablet) {
     font-size: 60px;
@@ -60,34 +63,19 @@
     font-weight: 400;
     padding-bottom: 2px;
   }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: @shop-grey;
-    top: 170px;
-    left: 0;
-
-    @media (min-width: @tablet) {
-      content: none;
-    }
-  }
 }
 
 .page__form-wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    margin-left: 70px;
-    margin-right: 70px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
     margin-top: 50px;
   }
 }
