--- a/source/less/components/product-info.less
+++ b/source/less/components/product-info.less
@@ -39,16 +39,15 @@
 }
 
 .product-info__outer-wrapper {
+  position: relative;
   &::before {
     content: "";
     display: block;
     position: absolute;
     left: 0;
-    top: 67px;
     width: 100%;
     height: 302px;
     z-index: 0;
-    // background: @cat-bg;
     background: linear-gradient(90deg, @cat-bg 50%, @cat-bg-dark 50%);
 
 
@@ -68,18 +67,16 @@
 }
 
 .product-info__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: @tablet) {
-    min-height: 874px;
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 708px;
   }
 
   @media (min-width: @laptop) {
-    margin-left: 110px;
-    margin-right: 110px;
+    width: 1220px;
   }
 }
 
