--- a/source/less/components/programs.less
+++ b/source/less/components/programs.less
@@ -25,7 +25,7 @@
     width: 100%;
   }
 
-  &-slim::before {
+  &--slim::before {
     content: "";
     display: block;
     position: absolute;
@@ -56,7 +56,7 @@
     }
   }
 
-  &-mass::before {
+  &--mass::before {
     content: "";
     display: block;
     position: absolute;
@@ -136,7 +136,7 @@
   }
 }
 
-.programs-description-wrapper {
+.programs__description-wrapper {
   position: relative;
   margin-right: 20px;
   margin-left: 20px;
