--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -14,6 +14,7 @@
 @white: #FFFFFF;
 @border-grey2: #E7E7E7;
 @figma-background: #E5E5E5;
+@navigation-splitter: #E6E6E6;
 @contrast: tomato;
 @slider-grey: #DCDCDC;
 @cat-bg: #515056;
