--- a/source/less/components/product-info.less
+++ b/source/less/components/product-info.less
@@ -114,7 +114,7 @@
       position: absolute;
       background-repeat: no-repeat;
       background-image: url("/img/index-can-tablet1.png");
-      top: 232px;
+      top: 213px;
       left: auto;
       right: auto;
       z-index: -1;
@@ -126,7 +126,7 @@
       position: absolute;
       background-repeat: no-repeat;
       background-image: url("/img/index-can-desktop1.png");
-      top: 29px;
+      top: 0;
       left: auto;
       z-index: 5;
       margin-left: 315px;
@@ -142,7 +142,7 @@
   color: @white;
   display: block;
   padding-top: 27px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   width: 249px;
   margin-left: auto;
   margin-right: auto;
@@ -155,6 +155,7 @@
     width: 414px;
     text-align: start;
     margin-left: 0;
+    padding-top: 41px;
   }
 
   @media (min-width: @laptop) {
@@ -179,7 +180,7 @@
     line-height: 20px;
     font-weight: 400;
     text-align: start;
-    margin-top: 41px;
+    margin-top: 31px;
     display: block;
   }
 
@@ -189,8 +190,9 @@
     line-height: 20px;
     font-weight: 400;
     text-align: start;
-    margin-top: 41px;
+    margin-top: 31px;
     margin-left: 80px;
+    margin-bottom: 5px;
   }
 }
 
@@ -202,25 +204,24 @@
   text-decoration: inherit;
   text-transform: uppercase;
   background-color: @green;
-  padding-top: 7px;
+  padding-top: 10px;
   padding-bottom: 7px;
   display: block;
   text-align: center;
   width: 100%;
-  height: auto;
-  margin-bottom: 20px;
+  height: 22px;
   order: 2;
 
   @media (min-width: @tablet) {
     margin-left: 0;
-    margin-top: 49px;
+    margin-top: 46px;
     width: 244px;
     height: 26px;
     font-size: 20px;
     line-height: 26px;
     padding-top: 14px;
     padding-bottom: 14px;
-    margin-bottom: 531px;
+    margin-bottom: 527px;
   }
 
   @media (min-width: @laptop) {
