--- a/source/less/components/programs.less
+++ b/source/less/components/programs.less
@@ -4,6 +4,10 @@
   max-width: 100%;
   margin-top: 20px;
 
+  @media (min-width: @tablet) {
+    margin-top: 0px;
+  }
+
   @media (min-width: @laptop) {
     display: flex;
     justify-content: space-between;
@@ -18,6 +22,7 @@
 
   @media (min-width: @tablet) {
     padding-left: 52px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: @laptop) {
@@ -43,7 +48,7 @@
       background-size: 100%;
       left: auto;
       right: 92px;
-      top: 81px;
+      top: 80px;
     }
 
     @media (min-width: @laptop) {
@@ -104,7 +109,7 @@
       height: 200px;
       left: auto;
       right: 62px;
-      top: 92px;
+      top: 91px;
     }
 
     @media (min-width: @laptop) {
@@ -127,7 +132,7 @@
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
-    padding-top: 77px;
+    padding-top: 76px;
     margin-left: 0;
   }
 
@@ -157,12 +162,13 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
+    margin-top: 25px;
   }
 
   @media (min-width: @laptop) {
     display: block;
     padding-right: 52px;
-    margin-top: 73px;
+    margin-top: 75px;
     margin-right: 0;
     max-width: 100%;
   }
@@ -212,13 +218,14 @@
 
   @media (min-width: @tablet) {
     margin-left: 0;
-    margin-top: 52px;
+    margin-top: 51px;
     padding-bottom: 57px;
     font-size: 20px;
     line-height: 30px;
+    margin-bottom: 0px;
   }
 
-  @media (min-width: @tablet) {
+  @media (min-width: @laptop) {
     margin-top: 27px;
     padding-bottom: 59px;
   }
