--- a/source/less/components/slider.less
+++ b/source/less/components/slider.less
@@ -19,7 +19,7 @@
   background-repeat: no-repeat;
   background-size: 100% auto;
   width: 100%;
-  height: 300px;
+  height: 243px;
 
   // Ретина-кот
   // @media (min-resolution: 2dppx) {
@@ -49,6 +49,7 @@
   @media (min-width: @tablet) {
     margin-left: 70px;
     margin-right: 70px;
+    margin-top: 19px;
   }
 }
 
